# GEMM-handmade

./: .gitattributes  .gitignore  benchmark.py  cgemmbuild.sh  check.py  kernels.py  plot.py  pyproject.toml  utils.py
cgemm/: CMakeLists.txt
cgemm/src/: CMakeLists.txt  cgemm.c  cgemm_args.c  cgemm_args.h  cgemm_blas.c  cgemm_blas.h  cgemm_block.c  cgemm_block.h  cgemm_kernel.c  cgemm_kernel.h  cgemm_naive.c  cgemm_naive.h  cgemm_pack.c  cgemm_pack.h  cgemm_simple.c  cgemm_simple.h  cugemm_naive.cu  cugemm_naive.h  standalone_runner.c  test.py
cgemm/use/: cgemm_naive.py
gemm/: gemm_continuous.py  gemm_naive.py
gemm/loop_order/: gemm_kmn.py  gemm_knm.py  gemm_mkn.py  gemm_mnk.py  gemm_nmk.py
gemm_c/: gemm_naive.c
gemm_py/: gemm_continuous.py  gemm_naive.py  gemm_numpy.py  gemm_numpy_naive.py  gemm_unrolled.py
gemm_py/loop_order/: gemm_nkm.py
